--- a/Front-end/src/header.css
+++ b/Front-end/src/header.css
@@ -1,52 +1,68 @@
 .header {
-    background-color: #0c5c5c;
-    opacity: 0.8;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    padding-top: 0;
-  }
-  
-  .logo h1 {
-    font-size: 27px;
-    font-family: 'Arial', sans-serif;
-    color: white;
+  background-color: #0c5c5c;
+  opacity: 0.8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  padding-top: 0;
+}
 
-  }
-  
-  .nav-links ul {
-    list-style: none;
-    display: flex;
-    margin-right: 10px;
-    padding: 0;
-  }
-  
-  .nav-links ul li {
-    margin-left: 20px;
-  }
-  
-  .nav-links ul li a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-family: 'Arial', sans-serif;
-    margin-right: 16px;
-  }
-  
-  .nav-links ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  
-  .logo{
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .logo_foto{
-    height: 70px;
-    padding-left: 150px;
-  }
-  
-  
+.logo h1 {
+  font-size: 27px;
+  font-family: 'Arial', sans-serif;
+  color: white;
+}
+
+.nav-links ul {
+  list-style: none;
+  display: flex;
+  margin-right: 10px;
+  padding: 0;
+}
+
+.nav-links ul li {
+  margin-left: 20px;
+}
+
+.nav-links ul li a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-family: 'Arial', sans-serif;
+  margin-right: 16px;
+}
+
+.nav-links ul li a:hover {
+  text-decoration: underline;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo_foto {
+  height: 70px;
+  padding-left: 150px;
+}
+
+/* Estilos adicionales para el menú desplegable */
+.dropdown-content {
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
